fixed header styling/spacing

--- a/src/UserInfo/UserInfo.css
+++ b/src/UserInfo/UserInfo.css
@@ -1,7 +1,10 @@
 .user-info-holder {
-  position: absolute;
-  top: 10px;
-  right: 10px;
   display: flex;
   flex-direction: column;
+  min-width: 200px;
+}
+
+.user-info-holder button {
+  width: 200px;
+  margin: auto;
 }
